js/js.translator/testData/incremental/invalidation/fakeOverrideInterfaceFunctionQualifiers/lib2/l2.kt
class Module1Class: Module2Interface {
    fun testFunction1() = 1
}
